Improve state debugging text